refactor(webhook): Change code to java.